
2007-09-16  Roland Clobus <rclobus@bigfoot.com>
	* common/network.h, common/state.c, common/network.c: The server could
	crash when a SIGPIPE was received.

2007-08-11  Roland Clobus <rclobus@bigfoot.com>
	* common/network.c: Added net_would_block and net_write_error to help
	porting the server to MS Windows (based on a patch by Keishi Suenaga).
	* server/player.c: When a player is still connecting, don't reuse the
	player number.

2007-08-08  Roland Clobus <rclobus@bigfoot.com>
	* getVersions.sh: Updated for SF
	
2007-08-05  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Work version is 0.11.3
	* docs/README.release: updated svn branch command.

2007-08-05  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.11.2

2007-08-05  Roland Clobus <rclobus@bigfoot.com>
	* server/robber.c: Do not use sm_send in the server, but player_send.
	* common/network.c: Added \n after a log message.
	* pioneers.spec.in: Corrected download location, changed packager name.
	* docs/README.release: Updated release script
	* README, NEWS, client/ai/lobbybot.c: Prepare for release 0.11.2

2007-08-05  Bas Wijnen <shevek@fmf.nl>
	* client/common/client.c: Fixed OK button in discard dialog

2007-08-04  Roland Clobus <rclobus@bigfoot.com>
	* common/map_query.c: Added checks against NULL pointers, based on
	the patch by ffaadd (#1767378), which could crash the server.

2007-08-01  Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/pioneers.xml, client/help/C/images/quote.png,
	client/help/C/images/trade.png, client/help/C/images/server-create.png,
	client/help/C/images/plenty-dialog.png, client/help/C/images/sea.png,
	client/help/C/images/monopoly-dialog.png, client/help/C/images/map.png,
	client/help/C/images/pasture.png, client/help/C/images/field.png,
	client/help/C/images/desert.png,
	client/help/C/images/player-summary.png, client/help/C/images/hill.png,
	client/help/C/images/identity.png, client/help/C/images/brick.png,